tests/netconvert/import/XML/errors/testsuite.netconvert
# Tests what happens if xml-edges can not be read
xml_false_edg

# Tests what happens if no xml-edges are given
xml_no_edg

# Tests what happens if xml-nodes can not be read
xml_false_nod

# Tests what happens if no xml-nodes are given
xml_no_nod

# Tests what happens if from-node and to-node are identical
xml_looped_edge

# Tests for broken edges
broken_edge
